--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/birb"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Birbapp"
         tools:targetApi="31">
+        <receiver
+            android:name=".PostUpdateReceiver"
+            android:enabled="true"
+            android:exported="false"></receiver>
+
+        <activity
+            android:name=".CreatePost"
+            android:exported="false" />
         <activity
             android:name=".UserFeed"
             android:exported="false" />
